--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation("androidx.constraintlayout:constraintlayout:2.2.0-alpha10")
 }
