--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.karumi:dexter:6.2.3'
-    implementation 'com.google.android.material:material:1.9.0'
+    //implementation 'com.google.android.material:material:1.9.0'
     implementation("androidx.constraintlayout:constraintlayout:2.2.0-alpha10")
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha10"
 }
