--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
     //implementation 'com.google.android.material:material:1.9.0'
     implementation("androidx.constraintlayout:constraintlayout:2.2.0-alpha10")
+    implementation 'com.synnapps:carouselview:0.1.4'
 }
