--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
+        //classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
